objects/TotemAdjustment__mdt/TotemAdjustment__mdt.object-meta.xml
<CustomObject>
    <label>Totem Adjustment</label>
    <pluralLabel>Totem Adjustments</pluralLabel>
</CustomObject>