objects/TotemAdjustment__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EssenceLossMultiplier</fullName>
                <default>true</default>
                <label>EssenceLossMultiplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>