objects/TotemAdjustment__mdt/fields/Totem__c.field-meta.xml
<CustomField>
    <fullName>Totem__c</fullName>
    <label>Totem</label>
    <referenceTo>Totem__mdt</referenceTo>
    <relationshipLabel>Totem Adjustments</relationshipLabel>
    <relationshipName>Totem_Adjustments</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>