objects/TotemAdjustment__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>